sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:10: error: not found: value i
    while (i+ecart<getNombreValeurs) {
           ^AlgCombSort:11: error: not found: value na
      na=0
      ^AlgCombSort:12: error: not found: value i
      if (plusPetit(i+ecart,i)) {
                    ^AlgCombSort:12: error: not found: value i
      if (plusPetit(i+ecart,i)) {
                            ^AlgCombSort:13: error: not found: value i
        echange(i,i+ecart)
                ^AlgCombSort:13: error: not found: value i
        echange(i,i+ecart)
                  ^AlgCombSort:15: error: not found: value i
        i+=1
        ^AlgCombSort:18: error: not found: value na
  } while (ecart>1 | na>0)
                     ^